--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link href="bootstrap.min.css" rel="stylesheet">
     </head>
-    <body class="bg-body-secondary d-flex flex-column min-vh-100 p-3">
+    <body class="bg-body-secondary d-flex justify-content-center align-items-center min-vh-100 p-3">
         <main class="container p-3 bg-body rounded-3" style="max-width: 476px;">
             <header class="mb-4">
                 <div class="d-flex justify-content-between align-items-center">
